--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tabler/icons-react": "^3.34.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.11",
+    "lucide-react": "^0.533.0",
     "motion": "^12.23.11",
     "next": "15.4.4",
     "react": "19.1.0",
